7. 하이킹, 걷기, 조깅.md 업데이트

--- a/study/오픽/7. 하이킹, 걷기, 조깅.md
+++ b/study/오픽/7. 하이킹, 걷기, 조깅.md
@@ -3,16 +3,16 @@
 ## 하이킹/걷기/조깅 하기 위해 가는 장소에 대해 말해보세요(어딘지, 어떻게 가는지, 장점이 뭔지, 하이킹 하는 데 총 시간은 얼마인지)
 
 
-I usually go to a park or a nearby trail for it.
 
-These places are quiet and surrounded by nature.
+I usually go to the park.
 
-There are paths that are perfect for [walking, jogging, or hiking].
+This place is quiet and surrounded by nature.
 
-I like going there in the morning or evening when it’s cooler.
+There is a perfect path for walking.
 
-It’s a peaceful way to enjoy some fresh air and exercise.
+I like to go there in the morning.
 
+It is a peaceful way to enjoy fresh air and exercise.
 
 ## 하이킹/ 걷기/ 조깅 준비물
 
