--- a/study/오픽/9. 여행, 출장.md
+++ b/study/오픽/9. 여행, 출장.md
@@ -16,7 +16,7 @@ I also bring some guidebooks for that place.
 
 And I go to bed early.
 
-## 처음 해외여행을 갔던 장소, 시기, 사람 (기억에 남는 으로 대체 가능)
+## 처음 해외여행을 갔던 장소, 시기, 사람
 
 when I was 10 years old.
 
@@ -26,7 +26,19 @@ I went to Tokyo with my famliy.
 
 we visited many traditional temples.
 
+I took a lot of pictures.
+
 It is very interesting experience.
 
-I took a lot of pictures.
+## 기억으로 남는
+
+Recently, I visited a park while traveling abroad.
+
+The park was clean and peaceful, with lots of trees and open space.
+
+I took a walk, sat on a bench, and listened to the sounds of nature.
+
+I loved experiencing nature in a new place.
+
+It was a memorable visit, and I hope to go back someday.
 
