--- a/study/오픽/2. 집, 동네 묘사.md
+++ b/study/오픽/2. 집, 동네 묘사.md
@@ -113,9 +113,9 @@ It is a good place to live.
 ## 이웃 묘사
 
 
-The people in my neighborhood are friendly and polite.
+My neighborhood is kind and friendly.
 
-Many of them are students or office workers living in studio apartments.
+Most of my neighbors are students or office workers.
 
 I often see them walking to the subway station or visiting the park.
 
@@ -126,13 +126,13 @@ Overall, it’s a quiet and nice community to live in.
 
 ## 동네에서의 기억?
 
-One weekend, I went to the park in my neighborhood to relax.
+Recently, I went to the park in my neighborhood to relax.
 
 The weather was great, and many people were enjoying the day.
 
-I walked around, read a book, and enjoyed some fresh air.
+I walked around, and enjoyed some fresh air.
 
-After that, I stopped by the supermarket to buy some groceries.
+After that, I stopped by the supermarket to buy food.
 
 It was a simple but enjoyable way to spend my time.
 
