--- a/study/오픽/5. 해변, 캠핑.md
+++ b/study/오픽/5. 해변, 캠핑.md
@@ -2,11 +2,11 @@
 
 ## 좋아하는 해변, 이유
 
-I really like Haeundae Beach.
+I really love Haeundae Beach.
 
 It is a famous beach in south Korea.
 
-when I need to clear my mind with my friends, I go there often.
+when I need to clear mind with my friends, I go there often.
 
 It has beautiful white sand and very delicous seafood.
 
@@ -25,11 +25,11 @@ The simple one is best.
 
 I don't have a lot of load.
 
-Take the suncrip.
+I pack a simple bag. And I also take sunscreen.
 
 because I have sensitive skin.
 
-And I pack extra clothes.
+I like keeping it simple and easy.
 
 That's all.
 
@@ -44,7 +44,7 @@ The sound of the waves and the sunset were so relaxing.
 
 We also had a barbecue and seafood.
 
-It was one of the best days I’ve ever had.
+It was one of the best days.
 
 
 
@@ -57,7 +57,7 @@ I really like the Gwangju campsite.
 
 It is a famous campsite in Gwangju.
 
-I go there when I need to clear my mind with my family.
+when I need to clear mind with my family, I go there often.
 
 There are beautiful valleys and barbecues.
 
@@ -86,10 +86,10 @@ when I was young.
 
 I went camping on 무등 Mountain with my family.
 
-At night, I was surprised by the beautiful night sky.
+At night, I was surprised by the beautiful sky.
 
 Everything is different. It's amazing.
 
 And the sunrise was also incredible.
 
-I'll never forget that memory.
+It is very interesting experience.
