--- a/study/오픽/7. 하이킹, 걷기, 조깅.md
+++ b/study/오픽/7. 하이킹, 걷기, 조깅.md
@@ -2,8 +2,6 @@
 
 ## 하이킹/걷기/조깅 하기 위해 가는 장소에 대해 말해보세요(어딘지, 어떻게 가는지, 장점이 뭔지, 하이킹 하는 데 총 시간은 얼마인지)
 
-
-
 I usually go to the park.
 
 This place is quiet and surrounded by nature.
@@ -16,16 +14,19 @@ It is a peaceful way to enjoy fresh air and exercise.
 
 ## 하이킹/ 걷기/ 조깅 준비물
 
-I don’t prepare much for it.
+when I go to [    ].
 
-I just wear comfortable shoes and take a water bottle.
+The simple one is best.
 
-Sometimes, I bring a hat if it’s sunny.
+I don't have a lot of load.
 
-That’s all I need to enjoy walking, jogging, or hiking.
+I pack a simple bag. And I also take sunscreen.
+
+because I have sensitive skin.
+
+That’s all I need to enjoy [walking, jogging, or hiking].
 
 I like keeping it simple and easy.
-
 
 
 ## 하이킹/ 걷기/ 조깅 장점
