--- a/study/오픽/9. 여행, 출장.md
+++ b/study/오픽/9. 여행, 출장.md
@@ -10,11 +10,15 @@ I like going there because it is warm and the scenery is beautiful.
 
 Before the trip,
 
-I usually pack my things simply.
+The simple one is best.
 
-I also bring some guidebooks for that place.
+I don't have a lot of load.
+
+I usually pack my things simply
 
 And I go to bed early.
+
+I like keeping it simple and easy.
 
 ## 처음 해외여행을 갔던 장소, 시기, 사람
 
