--- a/study/오픽/10. 롤플레잉.md
+++ b/study/오픽/10. 롤플레잉.md
@@ -2,9 +2,11 @@
 
 ## 서비스 이용 질문
 
-- what are your operating hours?
+- I'd like to make a reservation for tomorrow.
 
-- Do I need a reservation, or can I walk in?
+- I would like to cancel reservation
+
+- and what about the amenities?
 
 - Are you open on weekends or holidays?
 
