--- a/study/오픽/3. 영화, 음악.md
+++ b/study/오픽/3. 영화, 음악.md
@@ -65,11 +65,11 @@ he was very fuuny in the movie.
 
 My favorite music genre is K-pop.
 
-because it’s fun and full of energy.
+because it’s exciting and full of energy.
 
 One of my favorite groups is 뉴진스.
 
-Their songs are catchy, and their performances are amazing.
+Their songs are attractive, and their performances are amazing.
 
 Listening to their music always cheers me up.
 
