--- a/study/오픽/11. 돌발-장소.md
+++ b/study/오픽/11. 돌발-장소.md
@@ -19,7 +19,7 @@ Recently, I went to a [ 장소 ] near my house.
 
 The atmosphere was vibrant(바이브런트), and the staff were very friendly.
 
-I spent my time [장소에서 한 활동, 예: reading, walking, enjoying food ], and everything went well.
+I spent my time [장소에서 한 활동], and everything went well.
 
 It was a good experience, and I felt happy with how things turned out.
 
