--- a/study/오픽/12. 돌발-날씨, 재활용.md
+++ b/study/오픽/12. 돌발-날씨, 재활용.md
@@ -2,9 +2,40 @@
 
 ## 요즘 날씨 묘사
 
+The weather these days is a bit cold.
+
+The mornings and evenings feel chilly, but the afternoons are warmer.
+
+It’s sunny most of the time, with clear blue skies.
+
+I like wearing a light jacket when I go outside.
+
+It’s the perfect season to enjoy a walk in the park.
+
 ## 예전과 지금 날씨 변화
 
+The weather feels different from when I was younger.
+
+Winters seem warmer, and summers feel much hotter.
+
+We also get heavy rain more often than before.
+
+I think climate change is affecting the weather a lot.
+
+It makes me worry about the future.
+
+
 ## 날씨 때문에 생긴 경험
+
+One day, it suddenly started raining heavily while I was outside.
+
+I didn’t have an umbrella, so I got completely wet.
+
+I ran to find shelter, but it was too late.
+
+It was uncomfortable, but I laughed about it later.
+
+Now, I always check the weather before going out.
 
 ## 재활용
 
