--- a/study/면접 지식/java/면접 질문/0. 신입 개발자 기술면접 질문 정리 .md
+++ b/study/면접 지식/java/면접 질문/0. 신입 개발자 기술면접 질문 정리 .md
@@ -1,6 +1,8 @@
 # 기술면접 질문 정리 (Java)
 
-ref : https://dev-coco.tistory.com/153
+ref1 : https://dev-coco.tistory.com/153
+
+ref2 : https://velog.io/@prettylee620/신입개발자의-중소-si-취뽀-2탄-면접-후기-질문-취업-관련-사이트-모음
 
 ## 1. 자바 특징
 - 객체 지향 프로그래밍
