--- a/study/면접 지식/java/면접 질문/3. 동기와 비동기의 차이.md
+++ b/study/면접 지식/java/면접 질문/3. 동기와 비동기의 차이.md
@@ -12,3 +12,6 @@
 
 - 특정 작업이 끝나지 않아도 다음 작업 실행
 
+## 정리
+
+<table><thead><tr><th><strong>특징</strong></th><th><strong>동기(Synchronous)</strong></th><th><strong>비동기(Asynchronous)</strong></th></tr></thead><tbody><tr><td><strong>작업 처리 방식</strong></td><td>순차적으로 작업을 완료한 후 다음 작업 수행</td><td>동시에 작업을 진행하며 결과를 기다리지 않음</td></tr><tr><td><strong>블로킹 여부</strong></td><td>블로킹 (Blocking)</td><td>논블로킹 (Non-blocking)</td></tr><tr><td><strong>효율성</strong></td><td>자원 사용이 비효율적</td><td>자원 사용이 효율적</td></tr><tr><td><strong>복잡성</strong></td><td>단순한 구조</td><td>상대적으로 복잡</td></tr><tr><td><strong>예시 상황</strong></td><td>파일 읽기, 네트워크 요청에서 응답 대기</td><td>이벤트 루프, 콜백, 프로미스 사용</td></tr></tbody></table>
