Update 서울 매력 일자리 교육 예상 질문 정리.md

--- a/study/면접 지식/면접 해야할꺼/서울 매력 일자리 교육 예상 질문 정리.md
+++ b/study/면접 지식/면접 해야할꺼/서울 매력 일자리 교육 예상 질문 정리.md
@@ -190,6 +190,46 @@ API 설계 및 서류 작성
 
 ### 2-11. TDD 설명 및 필요 이유
 
+ 나의 경험 >> 여행 웹을 개발하면서 // 예외 처리, 추가적인 추가 등등
+
+ 이거에대한 해결점으로  TDD 를 찾아봄- 중앙에서 집약적인 상태관리를 통해 앱 내에서 데이터 흐름을 쉽게 파악할 수 있고 관리할 수 있습니다.
+
+- 상태의 불변성을 유지함으로써 예측 가능하고 안정적인 애플리케이션을 구현할 수 있습니다.
+
+- 상태 로직을 컴포넌트 외부로 분리함으로써, 해당 상태를 여러곳에서 재사용할 수 있습니다.
+
+[front-end-interview](https://github.com/suwan98/front-end-interview/blob/main/react-questions/state-management.md)
+
+### 2-8. 코드의 가독성, 클린 코드 적용사례
+
+네이밍이 잘 되어야 함
+오류가 없어야 함
+중복이 없어야 함
+의존성을 최대한 줄여야 함
+클래스 혹은 메소드가 한가지 일만 처리해야 함
+
+처음엔 검색, 필터, 페이징 로직을 전부 ProductList 컴포넌트에 넣었는데
+나중에 코드가 길어지고 복잡해져서,
+각 기능별로 useFilter, usePagination, useSearch로 나누고,
+UI도 작은 컴포넌트로 분리하면서
+코드 가독성도 높아지고 유지보수도 쉬워졌
+
+### 2-9. 빅데이터 융합 과정 프로젝트 간략 소개
+
+머신러닝을 이용한 프로젝트로 저희는 텍스트 마이닝을 이용한 우울증 측정 및 커뮤니티 웹 페이지로
+
+데이터 수집 및 DB 설계, 웹 개발 전반을 도맡아서 했습니다.
+
+### 2-10. Node.js 풀스택 부트캠프에서 뭘 배웠나?
+
+API 설계 및 서류 작성
+
+### 2-11. TDD 설명 및 필요 이유
+
+ 나의 경험 >> 여행 웹을 개발하면서 // 예외 처리, 추가적인 추가 등등
+
+ 이거에대한 해결점으로  TDD 를 찾아봄
+
 - TDD는 개발 방법론 중 하나로 테스트가 전체 개발을 주도해 내가는 것을 말함.
 
 1. 코드를 작성하기전 설계에 대해 구체적으로 작성이 가능
