--- a/study/면접 지식/면접 해야할꺼/서울 매력 일자리 교육 예상 질문 정리.md
+++ b/study/면접 지식/면접 해야할꺼/서울 매력 일자리 교육 예상 질문 정리.md
@@ -90,8 +90,20 @@ sessionStorage는 브라우저를 닫으면 데이터가 사라지지만, localS
 
 ### 1-5. RDBMS 와 Nosql 간의 차이점과 사용 이유
 
-RDBMS는 데이터를 테이블 형태로 저장하고, 정확성과 트랜잭션(ACID)이 중요한 시스템에서 사용됩니다.
-반면 NoSQL은 다양한 데이터 구조를 지원하며, 빠른 확장성과 대량 데이터 처리가 필요한 경우에 적합합니다.
+- RDBMS
+
+  - 정해진 스키마에 따라 데이터를 저장하여야 하므로 명확한 데이터 구조를 보장하고 있습니다.
+
+  - 각 데이터를 중복없이 한 번만 저장할 수 있습니다.
+
+- NoSQL
+
+  - 유연하며 자유로운 데이터 구조
+
+  - 빠른 속도
+
+  - 대량의 데이터 처리 필요시
+
 예를 들어, 은행 시스템은 RDBMS를, 소셜미디어 같은 서비스는 NoSQL을 주로 사용
 
 - ACID는 **원자성(Atomicity), 일관성(Consistency), 격리성(Isolation), 지속성(Durability)**을 의미하며, 트랜잭션의 신뢰성을 보장하는 개념입니다
@@ -190,9 +202,9 @@ API 설계 및 서류 작성
 
 ### 2-11. TDD 설명 및 필요 이유
 
- 나의 경험 >> 여행 웹을 개발하면서 // 예외 처리, 추가적인 추가 등등
+나의 경험 >> 여행 웹을 개발하면서 // 예외 처리, 추가적인 추가 등등
 
- 이거에대한 해결점으로  TDD 를 찾아봄- 중앙에서 집약적인 상태관리를 통해 앱 내에서 데이터 흐름을 쉽게 파악할 수 있고 관리할 수 있습니다.
+이거에대한 해결점으로 TDD 를 찾아봄- 중앙에서 집약적인 상태관리를 통해 앱 내에서 데이터 흐름을 쉽게 파악할 수 있고 관리할 수 있습니다.
 
 - 상태의 불변성을 유지함으로써 예측 가능하고 안정적인 애플리케이션을 구현할 수 있습니다.
 
@@ -226,9 +238,9 @@ API 설계 및 서류 작성
 
 ### 2-11. TDD 설명 및 필요 이유
 
- 나의 경험 >> 여행 웹을 개발하면서 // 예외 처리, 추가적인 추가 등등
+나의 경험 >> 여행 웹을 개발하면서 // 예외 처리, 추가적인 추가 등등
 
- 이거에대한 해결점으로  TDD 를 찾아봄
+이거에대한 해결점으로 TDD 를 찾아봄
 
 - TDD는 개발 방법론 중 하나로 테스트가 전체 개발을 주도해 내가는 것을 말함.
 
