매력일자리 면접 정리

--- a/study/면접 지식/면접 해야할꺼/1분 자기소개.md
+++ b/study/면접 지식/면접 해야할꺼/1분 자기소개.md
@@ -6,7 +6,7 @@
 부트캠프를 수료하였지만, 전문적인 지식과 실무에서의 경험이 부족하다는 걸 깨달았습니다.
 
 이번 풀스택 개발자 과정에 참여하여 저한테 부족했던 부분을 채워 나가고, 이후 인턴 기간 동안 직접 실무를 하면서 경험 쌓고 싶습니다.
-풀스택 개발자를 목표로, 배움에 적극적이고 책임감 있는 자세로 임하겠습니다. 감사합니다.
+풀스택 개발자를 목표로, 배움에 적극적이고 최선을 다 할 수 있는 모습을 보여드리겠습니다. 감사합니다.
 
 ## 포트폴리오
 
